@@ -1,6 +1,14 @@
 Gaim: The Pimpin' Penguin IM Clone thats good for the soul! 
 
 version 0.51:
+	* Arrow buttons in log viewer and some other dialogs
+	  work (thanks Ben Miller)
+	* Option to only send auto-response while idle (thanks
+	  Sean Egan)
+	* Control time between sending auto-responses (thanks
+	  Mark Doliner)
+	* Should be able to sign on to Oscar using Mac OS X
+	  (thanks Fingolfin, Vincas Ciziunas, et al.)
 
 version 0.50 (12/14/2001):
 	* Updated polish translation (Thanks Przemyslaw Sulek)
